test/tests/packages/lets_cycle/cycle.txt
error: cyclic package binding `pkga::$x`
 --> <packages/pkgb/lets.tql>:1:10
  |
1 | let $y = pkga::$x
  |          ^^^^^^^^ 
  |
